trunk/antlr-generated/cminusParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g 2011-02-15 18:47:43

  package org.kasunbg.cminus;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class cminusParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "SEMICOLON", "LEFT_SQUARE_BRACKET", "NUM", "RIGHT_SQUARE_BRACKET", "KEYWORD_INT", "KEYWORD_VOID", "LEFT_PAREN", "RIGHT_PAREN", "COMMA", "LEFT_BRACE", "RIGHT_BRACE", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_WHILE", "KEYWORD_RETURN", "PLUS", "MINUS", "MULTI", "DIVISION", "LESS_THAN", "LESS_THAN_OR_EQUAL", "GREATER_THAN", "GREATER_THAN_OR_EQUAL", "EQUAL_EQUAL", "NOT_EQUAL", "EQUAL", "NEWLINE", "COMMENT", "LETTER", "DIGIT", "WHITESPACE"
    };
    public static final int RIGHT_BRACE=15;
    public static final int LESS_THAN_OR_EQUAL=25;
    public static final int EQUAL_EQUAL=28;
    public static final int GREATER_THAN=26;
    public static final int KEYWORD_ELSE=17;
    public static final int KEYWORD_RETURN=19;
    public static final int LETTER=33;
    public static final int WHITESPACE=35;
    public static final int SEMICOLON=5;
    public static final int MULTI=22;
    public static final int MINUS=21;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int NUM=7;
    public static final int LEFT_SQUARE_BRACKET=6;
    public static final int RIGHT_SQUARE_BRACKET=8;
    public static final int GREATER_THAN_OR_EQUAL=27;
    public static final int RIGHT_PAREN=12;
    public static final int NEWLINE=31;
    public static final int KEYWORD_INT=9;
    public static final int NOT_EQUAL=29;
    public static final int COMMA=13;
    public static final int LEFT_BRACE=14;
    public static final int KEYWORD_IF=16;
    public static final int EQUAL=30;
    public static final int KEYWORD_VOID=10;
    public static final int KEYWORD_WHILE=18;
    public static final int LESS_THAN=24;
    public static final int DIVISION=23;
    public static final int LEFT_PAREN=11;
    public static final int PLUS=20;
    public static final int DIGIT=34;
    public static final int COMMENT=32;

    // delegates
    // delegators


        public cminusParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public cminusParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return cminusParser.tokenNames; }
    public String getGrammarFileName() { return "/media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g"; }



    // $ANTLR start "program"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:20:1: program : declarationList ;
    public final void program() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:21:2: ( declarationList )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:21:5: declarationList
            {
            pushFollow(FOLLOW_declarationList_in_program50);
            declarationList();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "program"


    // $ANTLR start "declarationList"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:24:1: declarationList : ( declaration )+ ;
    public final void declarationList() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:25:2: ( ( declaration )+ )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:25:4: ( declaration )+
            {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:25:4: ( declaration )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=KEYWORD_INT && LA1_0<=KEYWORD_VOID)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:25:4: declaration
            	    {
            	    pushFollow(FOLLOW_declaration_in_declarationList68);
            	    declaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return ;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "declarationList"


    // $ANTLR start "declaration"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:28:1: declaration : ( varDeclaration | funDeclaration );
    public final void declaration() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:29:2: ( varDeclaration | funDeclaration )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==KEYWORD_INT) ) {
                int LA2_1 = input.LA(2);

                if ( (LA2_1==ID) ) {
                    int LA2_3 = input.LA(3);

                    if ( (LA2_3==LEFT_PAREN) ) {
                        alt2=2;
                    }
                    else if ( ((LA2_3>=SEMICOLON && LA2_3<=LEFT_SQUARE_BRACKET)) ) {
                        alt2=1;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 2, 3, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 2, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA2_0==KEYWORD_VOID) ) {
                alt2=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:29:4: varDeclaration
                    {
                    pushFollow(FOLLOW_varDeclaration_in_declaration81);
                    varDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:29:21: funDeclaration
                    {
                    pushFollow(FOLLOW_funDeclaration_in_declaration85);
                    funDeclaration();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "declaration"


    // $ANTLR start "varDeclaration"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:32:1: varDeclaration : ( varTypeSpecifier ID SEMICOLON | varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON );
    public final void varDeclaration() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:33:2: ( varTypeSpecifier ID SEMICOLON | varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==KEYWORD_INT) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ID) ) {
                    int LA3_2 = input.LA(3);

                    if ( (LA3_2==SEMICOLON) ) {
                        alt3=1;
                    }
                    else if ( (LA3_2==LEFT_SQUARE_BRACKET) ) {
                        alt3=2;
                    }
                    else {
                        if (state.backtracking>0) {state.failed=true; return ;}
                        NoViableAltException nvae =
                            new NoViableAltException("", 3, 2, input);

                        throw nvae;
                    }
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:33:4: varTypeSpecifier ID SEMICOLON
                    {
                    pushFollow(FOLLOW_varTypeSpecifier_in_varDeclaration101);
                    varTypeSpecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_varDeclaration103); if (state.failed) return ;
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDeclaration105); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:34:4: varTypeSpecifier ID LEFT_SQUARE_BRACKET NUM RIGHT_SQUARE_BRACKET SEMICOLON
                    {
                    pushFollow(FOLLOW_varTypeSpecifier_in_varDeclaration112);
                    varTypeSpecifier();

                    state._fsp--;
                    if (state.failed) return ;
                    match(input,ID,FOLLOW_ID_in_varDeclaration114); if (state.failed) return ;
                    match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_varDeclaration116); if (state.failed) return ;
                    match(input,NUM,FOLLOW_NUM_in_varDeclaration118); if (state.failed) return ;
                    match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_varDeclaration120); if (state.failed) return ;
                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_varDeclaration122); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varDeclaration"


    // $ANTLR start "varTypeSpecifier"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:37:1: varTypeSpecifier : KEYWORD_INT ;
    public final void varTypeSpecifier() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:38:2: ( KEYWORD_INT )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:38:4: KEYWORD_INT
            {
            match(input,KEYWORD_INT,FOLLOW_KEYWORD_INT_in_varTypeSpecifier134); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "varTypeSpecifier"


    // $ANTLR start "funTypeSpecifier"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:41:1: funTypeSpecifier : ( KEYWORD_INT | KEYWORD_VOID );
    public final void funTypeSpecifier() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:42:2: ( KEYWORD_INT | KEYWORD_VOID )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:
            {
            if ( (input.LA(1)>=KEYWORD_INT && input.LA(1)<=KEYWORD_VOID) ) {
                input.consume();
                state.errorRecovery=false;state.failed=false;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                MismatchedSetException mse = new MismatchedSetException(null,input);
                throw mse;
            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "funTypeSpecifier"


    // $ANTLR start "funDeclaration"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:45:1: funDeclaration : funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt ;
    public final void funDeclaration() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:46:2: ( funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:46:4: funTypeSpecifier ID LEFT_PAREN params RIGHT_PAREN compoundStmt
            {
            pushFollow(FOLLOW_funTypeSpecifier_in_funDeclaration165);
            funTypeSpecifier();

            state._fsp--;
            if (state.failed) return ;
            match(input,ID,FOLLOW_ID_in_funDeclaration167); if (state.failed) return ;
            match(input,LEFT_PAREN,FOLLOW_LEFT_PAREN_in_funDeclaration169); if (state.failed) return ;
            pushFollow(FOLLOW_params_in_funDeclaration171);
            params();

            state._fsp--;
            if (state.failed) return ;
            match(input,RIGHT_PAREN,FOLLOW_RIGHT_PAREN_in_funDeclaration173); if (state.failed) return ;
            pushFollow(FOLLOW_compoundStmt_in_funDeclaration175);
            compoundStmt();

            state._fsp--;
            if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "funDeclaration"


    // $ANTLR start "params"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:49:1: params : ( paramList | KEYWORD_VOID );
    public final void params() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:50:2: ( paramList | KEYWORD_VOID )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==KEYWORD_VOID) ) {
                int LA4_1 = input.LA(2);

                if ( (LA4_1==RIGHT_PAREN) ) {
                    alt4=2;
                }
                else if ( (LA4_1==ID) ) {
                    alt4=1;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return ;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 4, 1, input);

                    throw nvae;
                }
            }
            else if ( (LA4_0==KEYWORD_INT) ) {
                alt4=1;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;
            }
            switch (alt4) {
                case 1 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:50:4: paramList
                    {
                    pushFollow(FOLLOW_paramList_in_params190);
                    paramList();

                    state._fsp--;
                    if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:50:16: KEYWORD_VOID
                    {
                    match(input,KEYWORD_VOID,FOLLOW_KEYWORD_VOID_in_params194); if (state.failed) return ;

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "params"


    // $ANTLR start "paramList"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:53:1: paramList : param ( COMMA param )* ;
    public final void paramList() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:54:2: ( param ( COMMA param )* )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:54:4: param ( COMMA param )*
            {
            pushFollow(FOLLOW_param_in_paramList207);
            param();

            state._fsp--;
            if (state.failed) return ;
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:54:10: ( COMMA param )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:54:12: COMMA param
            	    {
            	    match(input,COMMA,FOLLOW_COMMA_in_paramList211); if (state.failed) return ;
            	    pushFollow(FOLLOW_param_in_paramList213);
            	    param();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "paramList"


    // $ANTLR start "param"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:57:1: param : funTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET | () ) ;
    public final void param() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:58:2: ( funTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET | () ) )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:58:4: funTypeSpecifier ID ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET | () )
            {
            pushFollow(FOLLOW_funTypeSpecifier_in_param229);
            funTypeSpecifier();

            state._fsp--;
            if (state.failed) return ;
            match(input,ID,FOLLOW_ID_in_param231); if (state.failed) return ;
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:59:3: ( LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET | () )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==LEFT_SQUARE_BRACKET) ) {
                alt6=1;
            }
            else if ( ((LA6_0>=RIGHT_PAREN && LA6_0<=COMMA)) ) {
                alt6=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return ;}
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:59:5: LEFT_SQUARE_BRACKET RIGHT_SQUARE_BRACKET
                    {
                    match(input,LEFT_SQUARE_BRACKET,FOLLOW_LEFT_SQUARE_BRACKET_in_param238); if (state.failed) return ;
                    match(input,RIGHT_SQUARE_BRACKET,FOLLOW_RIGHT_SQUARE_BRACKET_in_param240); if (state.failed) return ;

                    }
                    break;
                case 2 :
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:59:48: ()
                    {
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:59:48: ()
                    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:59:49: 
                    {
                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "param"


    // $ANTLR start "compoundStmt"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:62:1: compoundStmt : LEFT_BRACE localDeclarations statementList RIGHT_BRACE ;
    public final void compoundStmt() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:63:2: ( LEFT_BRACE localDeclarations statementList RIGHT_BRACE )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:63:4: LEFT_BRACE localDeclarations statementList RIGHT_BRACE
            {
            match(input,LEFT_BRACE,FOLLOW_LEFT_BRACE_in_compoundStmt259); if (state.failed) return ;
            pushFollow(FOLLOW_localDeclarations_in_compoundStmt261);
            localDeclarations();

            state._fsp--;
            if (state.failed) return ;
            pushFollow(FOLLOW_statementList_in_compoundStmt263);
            statementList();

            state._fsp--;
            if (state.failed) return ;
            match(input,RIGHT_BRACE,FOLLOW_RIGHT_BRACE_in_compoundStmt265); if (state.failed) return ;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "compoundStmt"


    // $ANTLR start "localDeclarations"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:66:1: localDeclarations : ( varDeclaration )* ;
    public final void localDeclarations() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:67:2: ( ( varDeclaration )* )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:67:4: ( varDeclaration )*
            {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:67:4: ( varDeclaration )*
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==KEYWORD_INT) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:67:4: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_localDeclarations278);
            	    varDeclaration();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop7;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "localDeclarations"


    // $ANTLR start "statementList"
    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:70:1: statementList : ( statement )* ;
    public final void statementList() throws RecognitionException {
        try {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:71:2: ( ( statement )* )
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:71:4: ( statement )*
            {
            // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:71:4: ( statement )*
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( ((LA8_0>=ID && LA8_0<=SEMICOLON)||LA8_0==NUM||LA8_0==LEFT_PAREN||LA8_0==LEFT_BRACE||LA8_0==KEYWORD_IF||(LA8_0>=KEYWORD_WHILE && LA8_0<=KEYWORD_RETURN)) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // /media/DATA/ACADEMIC/LEVEL4/Compiler Theory/project/cminus-parser/trunk/src/org/kasunbg/cminus/cminus.g:71:4: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_statementList292);
            	    statement();

            	    state._fsp--;
            	    if (state.failed) return ;

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "statementList"

